zekroTJA.plotty.4adbb386badecfeccbcd3641b95cc8c0225bf942
Running as unit: run-p3842783-i12229766.scope; invocation ID: 642c1c8a17f24341b94927ad6981cdf8
    Updating `tuna` index
 Downloading crates ...
  Downloaded minecraft-client-rs v0.1.3 (registry `tuna`)
   Compiling proc-macro2 v1.0.103
   Compiling quote v1.0.42
   Compiling unicode-ident v1.0.22
   Compiling libc v0.2.177
    Checking cfg-if v1.0.4
   Compiling find-msvc-tools v0.1.4
   Compiling shlex v1.3.0
   Compiling typenum v1.19.0
   Compiling cc v1.2.45
   Compiling version_check v0.9.5
   Compiling serde_core v1.0.228
   Compiling parking_lot_core v0.9.12
   Compiling generic-array v0.14.9
    Checking smallvec v1.15.1
   Compiling serde v1.0.228
   Compiling syn v2.0.109
    Checking getrandom v0.2.16
   Compiling icu_normalizer_data v2.1.1
   Compiling icu_properties_data v2.1.1
   Compiling libm v0.2.15
    Checking memchr v2.7.6
    Checking stable_deref_trait v1.2.1
   Compiling autocfg v1.5.0
   Compiling zerocopy v0.8.27
    Checking untrusted v0.9.0
   Compiling num-traits v0.2.19
    Checking pin-project-lite v0.2.16
   Compiling ring v0.17.14
    Checking once_cell v1.21.3
    Checking scopeguard v1.2.0
    Checking lock_api v0.4.14
    Checking log v0.4.28
    Checking const-oid v0.9.6
    Checking bytes v1.10.1
    Checking itoa v1.0.15
    Checking parking_lot v0.12.5
    Checking futures-core v0.3.31
    Checking mio v1.1.0
    Checking socket2 v0.6.1
    Checking subtle v2.6.1
   Compiling crossbeam-utils v0.8.21
   Compiling zeroize v1.8.2
    Checking writeable v0.6.2
    Checking litemap v0.8.1
    Checking futures-sink v0.3.31
   Compiling serde_json v1.0.145
    Checking equivalent v1.0.2
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.6
    Checking digest v0.10.7
    Checking futures-channel v0.3.31
    Checking pin-utils v0.1.0
    Checking slab v0.4.11
    Checking futures-io v0.3.31
    Checking futures-task v0.3.31
    Checking futures-util v0.3.31
    Checking percent-encoding v2.3.2
    Checking form_urlencoded v1.2.2
    Checking tracing-core v0.1.34
    Checking rand_core v0.6.4
    Checking hashbrown v0.16.0
    Checking fnv v1.0.7
    Checking utf8_iter v1.0.4
    Checking http v0.2.12
   Compiling synstructure v0.13.2
    Checking sct v0.7.1
    Checking indexmap v2.12.0
    Checking ppv-lite86 v0.2.21
   Compiling rustls v0.23.35
   Compiling base64ct v1.8.0
    Checking ryu v1.0.20
   Compiling thiserror v2.0.17
   Compiling num-bigint-dig v0.8.5
   Compiling httparse v1.10.1
   Compiling pem-rfc7468 v0.7.0
    Checking rand_chacha v0.3.1
   Compiling rustls-pki-types v1.13.0
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.1
   Compiling zerovec-derive v0.11.2
   Compiling displaydoc v0.2.5
   Compiling serde_derive v1.0.228
   Compiling tracing-attributes v0.1.30
   Compiling tokio-macros v2.6.0
    Checking zerofrom v0.1.6
    Checking yoke v0.8.1
    Checking zerovec v0.11.5
    Checking tokio v1.48.0
    Checking zerotrie v0.2.3
    Checking tinystr v0.8.2
    Checking potential_utf v0.1.4
    Checking icu_collections v2.1.1
    Checking icu_locale_core v2.1.1
    Checking tracing v0.1.41
   Compiling thiserror-impl v2.0.17
    Checking icu_provider v2.1.1
   Compiling crunchy v0.2.4
    Checking icu_properties v2.1.1
    Checking icu_normalizer v2.1.1
    Checking cpufeatures v0.2.17
    Checking rand v0.8.5
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
   Compiling der v0.7.10
    Checking url v2.5.7
   Compiling ring v0.16.20
   Compiling rustls v0.21.12
   Compiling tiny-keccak v2.0.2
   Compiling spki v0.7.3
    Checking tokio-util v0.7.17
   Compiling num-integer v0.1.46
    Checking rustls-webpki v0.101.7
   Compiling allocator-api2 v0.2.21
   Compiling unicase v2.8.1
    Checking base64 v0.21.7
   Compiling spin v0.9.8
    Checking try-lock v0.2.5
   Compiling foldhash v0.1.5
   Compiling tinyvec_macros v0.1.1
   Compiling hashbrown v0.15.5
   Compiling tinyvec v1.10.0
    Checking want v0.3.1
   Compiling lazy_static v1.5.0
   Compiling rustls-webpki v0.103.8
   Compiling mime_guess v2.0.5
    Checking h2 v0.3.27
   Compiling num-iter v0.1.45
   Compiling pkcs8 v0.10.2
   Compiling concurrent-queue v2.5.0
   Compiling webpki-roots v1.0.4
    Checking webpki v0.22.4
    Checking http-body v0.4.6
    Checking socket2 v0.5.10
    Checking encoding_rs v0.8.35
    Checking httpdate v1.0.3
   Compiling rustls v0.20.9
    Checking tower-service v0.3.3
   Compiling thiserror v1.0.69
   Compiling crc-catalog v2.4.0
    Checking spin v0.5.2
    Checking untrusted v0.7.1
   Compiling ucd-trie v0.1.7
   Compiling parking v2.2.1
   Compiling event-listener v5.4.1
   Compiling pest v2.8.3
    Checking hyper v0.14.32
   Compiling tokio-stream v0.1.17
   Compiling crc v3.3.0
   Compiling webpki-roots v0.26.11
    Checking tokio-rustls v0.24.1
   Compiling pkcs1 v0.7.5
   Compiling const-random-macro v0.1.16
   Compiling futures-intrusive v0.5.0
   Compiling hashlink v0.10.0
   Compiling unicode-normalization v0.1.25
   Compiling sha2 v0.10.9
   Compiling either v1.15.0
   Compiling crossbeam-queue v0.3.12
   Compiling thiserror-impl v1.0.69
   Compiling signature v2.2.0
   Compiling hmac v0.12.1
   Compiling crc32fast v1.5.0
   Compiling base64 v0.22.1
    Checking byteorder v1.5.0
    Checking mime v0.3.17
   Compiling unicode-properties v0.1.4
   Compiling unicode-bidi v0.3.18
    Checking hashbrown v0.14.5
   Compiling typeid v1.0.3
    Checking hyper-rustls v0.24.2
   Compiling stringprep v0.1.5
   Compiling hkdf v0.12.4
   Compiling rsa v0.9.8
    Checking const-random v0.1.18
   Compiling pest_meta v2.8.3
    Checking rustls-pemfile v1.0.4
   Compiling sha1 v0.10.6
    Checking serde_urlencoded v0.7.1
   Compiling atoi v2.0.0
   Compiling bitflags v2.10.0
   Compiling md-5 v0.10.6
    Checking aho-corasick v1.1.4
    Checking webpki-roots v0.25.4
   Compiling hex v0.4.3
   Compiling whoami v1.6.1
   Compiling erased-serde v0.4.9
   Compiling sqlx-core v0.8.6
    Checking sync_wrapper v0.1.2
   Compiling anyhow v1.0.100
   Compiling dotenvy v0.15.7
    Checking ipnet v2.11.0
    Checking regex-syntax v0.8.8
    Checking reqwest v0.11.27
   Compiling pest_generator v2.8.3
    Checking regex-automata v0.4.13
    Checking dlv-list v0.5.2
    Checking sha-1 v0.10.1
   Compiling heck v0.5.0
    Checking powerfmt v0.2.0
   Compiling rustversion v1.0.22
    Checking utf8parse v0.2.2
    Checking winnow v0.7.13
    Checking simd-adler32 v0.3.7
    Checking adler2 v2.0.1
    Checking base64 v0.13.1
    Checking utf-8 v0.7.6
    Checking miniz_oxide v0.8.9
    Checking tungstenite v0.17.3
   Compiling sqlx-mysql v0.8.6
    Checking anstyle-parse v0.2.7
    Checking deranged v0.5.5
    Checking regex v1.12.2
    Checking toml_parser v1.0.4
    Checking ordered-multimap v0.7.3
   Compiling pest_derive v2.8.3
    Checking tokio-rustls v0.23.4
    Checking webpki-roots v0.22.6
   Compiling async-trait v0.1.89
    Checking ordered-float v2.10.1
    Checking serde_spanned v1.0.3
    Checking toml_datetime v0.7.3
    Checking num-conv v0.1.0
    Checking is_terminal_polyfill v1.70.2
    Checking arraydeque v0.5.1
    Checking colorchoice v1.0.4
    Checking anstyle v1.0.13
   Compiling sqlx-macros-core v0.8.6
   Compiling serenity v0.11.7
    Checking anstyle-query v1.1.4
    Checking match_cfg v0.1.0
    Checking unicode-segmentation v1.12.0
    Checking time-core v0.1.6
    Checking time v0.3.44
    Checking anstream v0.6.21
    Checking convert_case v0.6.0
    Checking hostname v0.3.1
    Checking yaml-rust2 v0.10.4
    Checking serde-value v0.7.0
    Checking toml v0.9.8
    Checking minecraft-uuid v1.0.0 (/tmp/nix-shell.uUVugk/zekroTJA_plotty_ktfg2g0w/minecraft-uuid)
    Checking async-tungstenite v0.17.2
    Checking json5 v0.4.1
    Checking rust-ini v0.21.3
    Checking serde-untagged v0.1.9
    Checking env_filter v0.1.4
   Compiling sqlx-macros v0.8.6
    Checking flate2 v1.1.5
    Checking ron v0.8.1
    Checking dashmap v5.5.3
    Checking futures v0.3.31
    Checking pathdiff v0.2.3
    Checking md5 v0.7.0
    Checking typemap_rev v0.1.5
    Checking jiff v0.2.16
    Checking bitflags v1.3.2
    Checking xid v1.1.1
    Checking minecraft-client-rs v0.1.3
    Checking uuid v1.18.1
    Checking minecraft-uuid-cli v0.1.0 (/tmp/nix-shell.uUVugk/zekroTJA_plotty_ktfg2g0w/minecraft-uuid-cli)
    Checking config v0.15.18
    Checking sqlx v0.8.6
    Checking env_logger v0.11.8
    Checking plotty v0.1.0 (/tmp/nix-shell.uUVugk/zekroTJA_plotty_ktfg2g0w/plotty)
error[E0275]: overflow evaluating the requirement `std::pin::Pin<Box<{async block@plotty/src/main.rs:98:5: 98:10}>>: CoerceUnsized<std::pin::Pin<Box<dyn std::future::Future<Output = ()> + std::marker::Send>>>`
  --> plotty/src/main.rs:98:5
   |
98 |     async fn interaction_create(&self, ctx: Context, interaction: Interaction) {
   |     ^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`plotty`)
   = note: required for the cast from `std::pin::Pin<Box<{async block@plotty/src/main.rs:98:5: 98:10}>>` to `std::pin::Pin<Box<dyn std::future::Future<Output = ()> + std::marker::Send>>`

For more information about this error, try `rustc --explain E0275`.
error: could not compile `plotty` (bin "plotty") due to 1 previous error
